# sanchezcoin-core

./: .gitignore  .gitmodules  LICENSE  README.md  coin.js  go.mod  inputs.js  main.go  main.js  main_cli.js  output.js  package-lock.json  package.json  suply_test.py
conditionscript/: lexer.go  op_codes.go  token_parser.go  types.go  utils.go
gui/: main.js  package-lock.json  package.json
scripts/python/: sqlite_max_blocks_calc.py  suply_test.py
scripts/sql/: get_first_add_block_full_list.sql  get_the_blocks.sql
sqls/: get_total_blocks.sql
src/: address.js  block.js  chain.js  chainparms.js  cnode.js  coin.js  consensus.js  constants.js  crypto.js  dbchain.js  hash_algo.js  host.js  inputs.js  mempool.js  merkle.js  mining.js  network.js  node.js  output.js  pos.js  pow.js  pow_thread.js  rickchain.js  rpc.js  swiftyh.js  transaction.js  utils.js  utxos.js  vint.js  wallet.js
src/condscript/: package-lock.json  package.json
src/condscript/src/: exceptions.js  index.js  interpreter.js  lexer.js  obj_types.js  opcodes.js  parser.js  utils.js
src/condscript/tests/: musig.js  pay_to_bitcoin_address.js  pay_to_ethereum_address.js  (+8 more)
src/consensus/: amount.js  consensus.js
src/crypto/: BUILD_INSTALL.md  Cargo.toml  README.md  index.js  package-lock.json  package.json  swiftyh.js  validate.js
src/crypto/src/: lib.rs
src/db_objects/: transactions.js
src/gui/: main.js  package-lock.json  package.json
src/scriptvm/: README.md  index.js  index.ts  lexer.js  opcodes.js  package-lock.json  package.json  parser.js
src/swiftyh/: Cargo.toml
(+21 files in other folders)
