[package]
name = "crypto"
version = "0.1.0"
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schnorrkel = "0.10.2"
rand = "0.8.5"
hex = "0.4.3"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
